--- a/Data Structructor/Data Structructor.vcxproj.filters
+++ b/Data Structructor/Data Structructor.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="탐색.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="재귀함수.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
