--- a/Data Structructor/Data Structructor.vcxproj.filters
+++ b/Data Structructor/Data Structructor.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="배열리스트.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="연결리스트.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
