--- a/Data Structructor/Data Structructor.vcxproj
+++ b/Data Structructor/Data Structructor.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="동적할당.c" />
     <ClCompile Include="배열.c" />
     <ClCompile Include="배열리스트.c" />
+    <ClCompile Include="연결리스트.c" />
     <ClCompile Include="재귀함수.c" />
     <ClCompile Include="탐색.c" />
     <ClCompile Include="포인터.c" />
