--- a/Data Structructor/Data Structructor.vcxproj.filters
+++ b/Data Structructor/Data Structructor.vcxproj.filters
@@ -39,5 +39,11 @@
     <ClCompile Include="연결리스트.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="스택.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="큐.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
