--- a/Data Structructor/Data Structructor.vcxproj.filters
+++ b/Data Structructor/Data Structructor.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClCompile Include="트리 삽입 삭제.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="그래프.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
