--- a/Data Structructor/Data Structructor.vcxproj.filters
+++ b/Data Structructor/Data Structructor.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClCompile Include="그래프.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="DFS.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
